# homework08

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
testdata2/exclude/: cpp3.txt
testdata4/: data2.txt  data3.txt
